--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/ventas
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:55244/railway
 spring.datasource.username=root
-spring.datasource.password=user
+spring.datasource.password=GAdgCc32fG2BEBeDddf-13a31HFEda1a
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #timeout max. 60 sec
